@@ -14,7 +14,7 @@ namespace core
 {
 
 //! Enumeration for intersection relations of 3d objects
-enum EIntersectionRelation3D 
+enum EIntersectionRelation3D
 {
 	ISREL3D_FRONT = 0,
 	ISREL3D_BACK,
@@ -34,7 +34,6 @@ class plane3d
 		plane3d(): Normal(0,1,0) { recalculateD(vector3d<T>(0,0,0)); };
 		plane3d(const vector3d<T>& MPoint, const vector3d<T>& Normal) : Normal(Normal) { recalculateD(MPoint); };
 		plane3d(T px, T py, T pz, T nx, T ny, T nz) : Normal(nx, ny, nz) { recalculateD(vector3d<T>(px, py, pz)); };
-		plane3d(const plane3d<T>& other) : Normal(other.Normal), D(other.D) {};
 		plane3d(const vector3d<T>& point1, const vector3d<T>& point2, const vector3d<T>& point3) { setPlane(point1, point2, point3); };
 
 		// operators
@@ -47,7 +46,6 @@ class plane3d
 		void setPlane(const vector3d<T>& point, const vector3d<T>& nvector)
 		{
 			Normal = nvector;
-			Normal.normalize();
 			recalculateD(point);
 		}
 
@@ -80,7 +78,7 @@ class plane3d
 			if (t2 == 0)
 				return false;
 
-			T t =- (Normal.dotProduct(linePoint) + D) / t2;			
+			T t =- (Normal.dotProduct(linePoint) + D) / t2;
 			outIntersection = linePoint + (lineVect * t);
 			return true;
 		}
@@ -104,7 +102,7 @@ class plane3d
 		//! \param linePoint2: Point 2 of the line.
 		//! \param outIntersection: Place to store the intersection point, if there is one.
 		//! \return Returns true if there was an intersection, false if there was not.
-		bool getIntersectionWithLimitedLine(const vector3d<T>& linePoint1, 
+		bool getIntersectionWithLimitedLine(const vector3d<T>& linePoint1,
 					const vector3d<T>& linePoint2, vector3d<T>& outIntersection) const
 		{
 			return (	getIntersectionWithLine(linePoint1, linePoint2 - linePoint1, outIntersection) &&
@@ -121,10 +119,10 @@ class plane3d
 			const T d = Normal.dotProduct(point) + D;
 
 			if (d < -ROUNDING_ERROR_32)
-				return ISREL3D_FRONT;
+				return ISREL3D_BACK;
 
 			if (d > ROUNDING_ERROR_32)
-				return ISREL3D_BACK;
+				return ISREL3D_FRONT;
 
 			return ISREL3D_PLANAR;
 		}
@@ -142,9 +140,9 @@ class plane3d
 			return Normal * -D;
 		}
 
-		//! Tests if there is a intersection between this plane and another
+		//! Tests if there is an intersection between with the other plane
 		//! \return Returns true if there is a intersection.
-		bool existsInterSection(const plane3d<T>& other) const
+		bool existsIntersection(const plane3d<T>& other) const
 		{
 			vector3d<T> cross = other.Normal.crossProduct(Normal);
 			return cross.getLength() > core::ROUNDING_ERROR_32;
@@ -155,9 +153,9 @@ class plane3d
 		bool getIntersectionWithPlane(const plane3d<T>& other, vector3d<T>& outLinePoint,
 				vector3d<T>& outLineVect) const
 		{
-			f64 fn00 = Normal.getLength();
-			f64 fn01 = Normal.dotProduct(other.Normal);
-			f64 fn11 = other.Normal.getLength();
+			T fn00 = Normal.getLength();
+			T fn01 = Normal.dotProduct(other.Normal);
+			T fn11 = other.Normal.getLength();
 			f64 det = fn00*fn11 - fn01*fn01;
 
 			if (fabs(det) < ROUNDING_ERROR_64 )
@@ -173,7 +171,7 @@ class plane3d
 		}
 
 		//! Returns the intersection point with two other planes if there is one.
-		bool getIntersectionWithPlanes(const plane3d<T>& o1, 
+		bool getIntersectionWithPlanes(const plane3d<T>& o1,
 				const plane3d<T>& o2, vector3d<T>& outPoint) const
 		{
 			vector3d<T> linePoint, lineVect;
@@ -200,11 +198,11 @@ class plane3d
 		{
 			return point.dotProduct(Normal) + D;
 		}
-	
+
 		// member variables
-		
+
 		vector3d<T> Normal;		// normal vector
-		T D;					// distance from origin
+		T D;				// distance from origin
 };
 
 
